<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66CAFD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="361dp"
        android:layout_height="130dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="PREGUNTAS" />

    <Button
        android:id="@+id/btYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/si"
        app:layout_constraintBaseline_toBaselineOf="@+id/btNo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="77dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <TextView
        android:id="@+id/tvScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13dp"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLifeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/vidas"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvScoreTitle"
        app:layout_constraintEnd_toStartOf="@+id/tvLife" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvScoreTitle"
        app:layout_constraintStart_toEndOf="@+id/tvScoreTitle"
        tools:text="00" />

    <TextView
        android:id="@+id/tvLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvScoreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="00" />

    <TextView
        android:id="@+id/tvNameMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="134dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLifeText"
        app:layout_constraintEnd_toStartOf="@+id/tvLifeText"
        app:layout_constraintStart_toEndOf="@+id/tvScore"
        tools:text="Name" />

</androidx.constraintlayout.widget.ConstraintLayout>