<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Register">

    <EditText
        android:id="@+id/etName"
        android:layout_width="351dp"
        android:layout_height="93dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="151dp"
        android:text="@string/bienvenido_a_cup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="159dp"
        android:onClick="register"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="134dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStart"
        app:srcCompat="@drawable/upc" />
</androidx.constraintlayout.widget.ConstraintLayout>